migration-result/docs/ver/13.x/application-access/jwt/elasticsearch.mdx
---
title: Using JWT authentication with Elasticsearch
description: How to use JWT authentication with Elasticsearch
version: "13.x"
---

This guide will help you configure Elasticsearch [JWT authentication](https://www.elastic.co/guide/en/elasticsearch/reference/current/jwt-realm.html)
with Teleport.

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/docs/ver/13.x) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.4.16.

      ```bash
      $ tctl version
      # Teleport v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```

      See [Installation](/docs/ver/13.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport v13.4.16 go1.21
      
    $ tsh version
    # Teleport v13.4.16 go1.21
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      13.4.16, which you can download by visiting your [Teleport
      account](https://teleport.sh).

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```bash
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```bash
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>
- Running [Application Service](/docs/ver/13.x/application-access/guides/connecting-apps).
- Elasticsearch cluster version >= `8.2.0`.

## Step 1/3. Enable a JWT realm in Elasticsearch

Update your Elasticsearch configuration file, `elasticsearch.yaml`, to enable a
JWT realm:

```yaml
xpack.security.authc.realms.jwt.jwt1:
  order: 1
  client_authentication.type: none
  pkc_jwkset_path: https://proxy.example.com/.well-known/jwks.json
  claims.principal: sub
  claims.groups: roles
  allowed_issuer: example-cluster
  allowed_audiences: ["https://elasticsearch.example.com:9200"]
```

Let's take a closer look at the parameters and their values:

- Set `client_authentication.type` to `none`, otherwise Elasticsearch requires
  clients to send a shared secret value with each request.
- Set `pkc_jwkset_path` to the JWT key set file URL of your Teleport Proxy. It
  is available at `https://<proxy>/.well-known/jwks.json` endpoint. You can
  also download the JSON file from the same URL and point the path directly to
  it instead of using a URL.
- Set `claims.principal` and `claims.groups` to `sub` and `roles` respectively.
  These are the claims Teleport uses to pass user and role information in JWT
  tokens. Keep in mind that **users and roles must exist** in Elasticsearch.
- Set `allowed_issuer` to the name of your Teleport cluster.
- Set `allowed_audiences` to the URL which Teleport Application Service will
  use to connect to Elasticsearch.

<Note>
  <p>
    **Elasticsearch role mapping**
  </p>

  Note that when using JWT authentication, you cannot map user roles using the
  standard Elasticsearch `role_mapping.yml` file. Instead, you need to set the
  role mapping using the API. See [JWT realm authorization](https://www.elastic.co/guide/en/elasticsearch/reference/current/jwt-realm.html#jwt-authorization)
  for details.
</Note>

## Step 2/3. Register an Elasticsearch application in Teleport

In your Teleport App Service configuration file, `teleport.yaml`, register an
entry for Elasticsearch:

```yaml
app_service:
  enabled: "yes"
  apps:
  - name: "elastic"
    uri: https://elasticsearch.example.com:9200
    rewrite:
      headers:
      - "Authorization: Bearer {{internal.jwt}}"
```

<Tip>
  You can also use [dynamic registration](/docs/ver/13.x/application-access/guides/dynamic-registration).
</Tip>

Elasticsearch requires a JWT token to be passed inside the `Authorization`
header. The header rewrite configuration above will replace the `{{internal.jwt}}`
template variable with a Teleport-signed JWT token in each request.

## Step 3/3. Connect to the ElasticSearch API

Log into your Teleport cluster with `tsh login` and make sure your Elasticsearch
application is available:

```bash
$ tsh apps ls
Application Description   Public Address               Labels
----------- ------------- ---------------------------- -------------------------------
elastic                   elastic.teleport.example.com
```

Fetch a short-lived X.509 certificate for Elasticsearch:

```bash
$ tsh apps login elastic
```

Then you can use the `curl` command to communicate with the Elasticsearch API,
which will authenticate you as your Teleport user:

```bash
$ curl \
  --cacert ~/.tsh/keys/teleport.example.com/cas/root.pem \
  --cert ~/.tsh/keys/teleport.example.com/alice-app/example-cluster/elastic-x509.pem \
  --key ~/.tsh/keys/teleport.example.com/alice \
  https://elastic.teleport.example.com/_security/user | jq
```

## Next steps

- Get more information about integrating with [Teleport JWT tokens](/docs/ver/13.x/application-access/jwt/introduction).
- Learn more about [accessing APIs](/docs/ver/13.x/application-access/guides/api-access) with the Teleport
  Application Service.
- Take a look at application-related [Access Controls](/docs/ver/13.x/application-access/controls).
